feat: added register key
