# docs/swagger.json
@@ -19,7 +19,7 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1": {
+        "/": {
             "get": {
                 "description": "Display the main page with redirect button",
                 "consumes": [
@@ -42,7 +42,7 @@
                 }
             }
         },
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "Authenticate user with username and password to obtain an API token for protected endpoints",
                 "consumes": [
@@ -124,7 +124,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/auth/register": {
             "post": {
                 "description": "Register a new user account with username, password and email. The password must be at least 8 characters long.",
                 "consumes": [
@@ -224,7 +224,7 @@
                 }
             }
         },
-        "/api/v1/ffmpeg": {
+        "/ffmpeg": {
             "post": {
                 "security": [
                     {
@@ -329,7 +329,7 @@
                 }
             }
         },
-        "/api/v1/ffmpeg/progress/{uuid}": {
+        "/ffmpeg/progress/{uuid}": {
             "get": {
                 "security": [
                     {
@@ -575,6 +575,7 @@
             "required": [
                 "email",
                 "password",
+                "register_key",
                 "username"
             ],
             "properties": {
@@ -585,6 +586,9 @@
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 8
+                },
+                "register_key": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string",
