# internal/dto/auth.go
@@ -2,9 +2,10 @@ package dto
 
 // RegisterRequest represents the registration request
 type RegisterRequest struct {
-	Username string `json:"username" validate:"required,min=3,max=50"`
-	Password string `json:"password" validate:"required,min=8,max=100"`
-	Email    string `json:"email" validate:"required,email"`
+	Username    string `json:"username" validate:"required,min=3,max=50"`
+	Password    string `json:"password" validate:"required,min=8,max=100"`
+	Email       string `json:"email" validate:"required,email"`
+	RegisterKey string `json:"register_key" validate:"required"`
 }
 
 // LoginRequest represents the login request
